<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    
    <properties>
	    <project.version>2.4.1-RELEASE</project.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <name>Mongo Genotype DataBase</name>
    <groupId>fr.cirad</groupId>
    <artifactId>mgdb2</artifactId>
    <version>${project.version}</version>        

    <developers>
        <developer>
            <name>Guilhem SEMPERE</name>
        </developer>
    </developers>

    <dependencies>
     		<dependency>
            		<groupId>javax.servlet</groupId>
            		<artifactId>javax.servlet-api</artifactId>
            		<version>4.0.1</version>
            		<scope>provided</scope>
        	</dependency>

		<dependency>
		    <groupId>com.opencsv</groupId>
		    <artifactId>opencsv</artifactId>
		    <version>5.4</version>
		</dependency>

		<dependency>
		    <groupId>com.squareup.okhttp3</groupId>
		    <artifactId>okhttp</artifactId>
		    <version>3.14.9</version>
		</dependency>
		<dependency>
		    <groupId>com.squareup.retrofit2</groupId>
		    <artifactId>retrofit</artifactId>
		    <version>2.9.0</version>
		</dependency>
		<dependency>
		    <groupId>com.squareup.retrofit2</groupId>
		    <artifactId>converter-jackson</artifactId>
		    <version>2.1.0</version>
		</dependency>
		<dependency>
		    <groupId>org.codehaus.jackson</groupId>
		    <artifactId>jackson-core-asl</artifactId>
		    <version>1.9.13</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-core</artifactId>
			<version>3.2.10.RELEASE</version>
		    <exclusions>
			    <exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-core</artifactId>
	  	        </exclusion>
			    <exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context</artifactId>
	  	        </exclusion>
			    <exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-beans</artifactId>
	  	        </exclusion>
	  	        <exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-aop</artifactId>
	  	        </exclusion>
	  	        <exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-jdbc</artifactId>
	  	        </exclusion>
	  	        <exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-tx</artifactId>
	  	        </exclusion>
		    </exclusions>
		</dependency>
    
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-log4j12</artifactId>
		    <version>1.7.22</version>
		</dependency>

		<dependency>
		    <groupId>javax.ejb</groupId>
		    <artifactId>ejb-api</artifactId>
		    <version>3.0</version>
		</dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.jmx</groupId>
                    <artifactId>jmxri</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.jms</groupId>
                    <artifactId>jms</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sun.jdmk</groupId>
                    <artifactId>jmxtools</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>javax.mail</groupId>
                    <artifactId>mail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.github.samtools</groupId>
            <artifactId>htsjdk</artifactId>
            <version>2.24.1</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.commons</groupId>
                    <artifactId>commons-compress</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.tukaani</groupId>
                    <artifactId>xz</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.apache.ant</groupId>
                    <artifactId>ant</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.testng</groupId>
                    <artifactId>testng</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.xerial.snappy</groupId>
                    <artifactId>snappy-java</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>de.johoop</groupId>
                    <artifactId>sbt-testng-interface_2.10</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
        </dependency>

        <dependency>
            <groupId>org.mongodb</groupId>
            <artifactId>mongodb-driver-sync</artifactId>
            <version>4.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-mongodb</artifactId>
            <version>3.0.5.RELEASE</version>
            <exclusions>
                <exclusion>
                    <groupId>org.mongodb</groupId>
                    <artifactId>mongodb-driver-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-expression</artifactId>
		<version>4.2.9.RELEASE</version>
	</dependency>

        <dependency>
            <groupId>fr.cirad</groupId>
            <artifactId>GenotypeFileManipulation</artifactId>
            <version>0.1.1-RELEASE</version>
        </dependency>
        
        <dependency>
            <groupId>fr.cirad</groupId>
            <artifactId>Mgdb2BrapiModel</artifactId>
            <version>1.0-RELEASE</version>
        </dependency>
        
    </dependencies>

	<repositories>
		<repository>
			<id>central</id>
			<url>http://central.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>sonatype</id>
			<url>https://oss.sonatype.org/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>Spring Plugins</id>
			<url>http://repo.spring.io/plugins-release/</url>
		</repository>

	</repositories>
	
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
        <sourceDirectory>${project.basedir}/src</sourceDirectory>
    </build>
  
</project>
